--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "@types/webpack-env": "^1.13.9",
+    "babel-preset-es2017": "^6.24.1",
     "css-loader": "^1.0.1",
     "husky": "^1.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -41,6 +42,7 @@
     "lint-staged": "^8.1.0",
     "preact-cli": "^3.0.0-next.19",
     "preact-cli-plugin-env-vars": "^1.2.1",
+    "preact-cli-svg-loader": "^1.0.0",
     "preact-render-spy": "^1.3.0",
     "prettier": "^1.15.3",
     "ts-jest": "^23.10.5",
@@ -56,6 +58,7 @@
   "dependencies": {
     "@audius/stems": "^0.1.4",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "env-cmd": "^10.0.1",
     "hls.js": "^0.13.1",
     "preact": "^10.0.0",
