--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
-    "preact-cli": "^3.0.0-next.19",
+    "preact-cli": "3.0.0-rc.7",
     "preact-cli-plugin-env-vars": "^1.2.1",
     "preact-cli-svg-loader": "^1.0.0",
     "preact-render-spy": "^1.3.0",
