--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build/*"
   ],
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^23.3.10",
     "@types/webpack-env": "^1.13.9",
     "babel-preset-es2017": "^6.24.1",
@@ -57,6 +58,7 @@
   },
   "dependencies": {
     "@audius/stems": "^0.1.4",
+    "@types/react": "^16.9.20",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.2.1",
@@ -64,7 +66,6 @@
     "hls.js": "^0.13.1",
     "preact": "^10.0.0",
     "preact-render-to-string": "^5.0.6",
-    "react-spring": "^8.0.27",
     "simplebar-react": "^2.1.0"
   },
   "peerDependencies": {
