--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
             "ES5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
         "module":
             "ESNext" /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-        // "lib": [],                             /* Specify library files to be included in the compilation:  */
+      "lib": ["es2018", "dom"],                             /* Specify library files to be included in the compilation:  */
         "allowJs": true /* Allow javascript files to be compiled. */,
         // "checkJs": true,                       /* Report errors in .js files. */
         "jsx":
-            "react" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
+            "preserve" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
         "jsxFactory": "h",
         // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
         // "sourceMap": true,                     /* Generates corresponding '.map' file. */
@@ -41,7 +41,7 @@
         "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
         "paths": { "*": ["typings/*"] },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
         // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-        // "typeRoots": [],                       /* List of folders to include type definitions from. */
+         "typeRoots": ["typings"],                       /* List of folders to include type definitions from. */
         // "types": [],                           /* Type declaration files to be included in compilation. */
         // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
@@ -57,6 +57,6 @@
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
         "esModuleInterop": true
     },
-  "include": ["src/**/*.tsx", "src/**/*.ts", "src/**/*.js", "typings/**"],
+  "include": ["src/**/*.tsx", "src/**/*.ts", "src/**/*.js", "src/assets/**/*.svg"],
   "exclude": ["build"]
 }
