--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "audius-bedtime",
-  "version": "0.0.1",
+  "name": "no-ts",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "start:production": "env-cmd -f .env.production npm run -s serve",
@@ -11,93 +11,45 @@
     "build": "preact build --no-prerender",
     "serve": "preact build --no-prerender && preact serve",
     "dev": "preact watch",
-    "lint": "tslint --project src",
-    "test": "jest ./tests",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,css,md,scss}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.{ts,tsx}": [
-      "tslint --fix",
-      "git add"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-aerian"
+    "lint": "eslint src",
+    "test": "jest"
   },
   "eslintIgnore": [
     "build/*"
   ],
   "devDependencies": {
-    "babel-preset-es2017": "^6.24.1",
-    "css-loader": "^1.0.1",
-    "husky": "^1.2.0",
+    "env-cmd": "^10.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-preact-pure": "^2.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-synacor": "^3.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
-    "lint-staged": "^8.1.0",
+    "jest": "^24.9.0",
+    "jest-preset-preact": "^1.0.0",
+    "per-env": "^1.0.2",
     "preact-cli": "3.0.0-rc.7",
     "preact-cli-plugin-env-vars": "^1.2.1",
     "preact-cli-svg-loader": "^1.0.0",
-    "preact-render-spy": "^1.3.0",
-    "prettier": "^1.15.3",
-    "ts-jest": "^23.10.5",
-    "ts-loader": "^3.5.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-consistent-codestyle": "^1.14.1",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^3.6.0",
-    "typings-for-css-modules-loader": "^1.7.0"
+    "preact-render-spy": "^1.2.1",
+    "serve": "^11.1.0"
   },
   "dependencies": {
     "@audius/stems": "^0.1.4",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.2.1",
-    "env-cmd": "^10.0.1",
     "hls.js": "^0.13.1",
-    "preact": "^10.0.0",
-    "preact-render-to-string": "^5.0.6",
+    "preact": "^10.0.1",
+    "preact-render-to-string": "^5.1.0",
+    "preact-router": "^3.0.0",
+    "react-spring": "^8.0.27",
     "simplebar-react": "^2.1.0"
   },
-  "peerDependencies": {
-    "prettier": ">1.0.0",
-    "tslint": ">5.0.0"
-  },
   "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "verbose": true,
+    "preset": "jest-preset-preact",
     "setupFiles": [
-      "<rootDir>/src/tests/__mocks__/browserMocks.js"
-    ],
-    "testURL": "http://localhost:8080",
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "ts",
-      "tsx"
-    ],
-    "moduleDirectories": [
-      "node_modules"
-    ],
-    "testMatch": [
-      "**/__tests__/**/*.[jt]s?(x)",
-      "**/?(*.)(spec|test).[jt]s?(x)"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/tests/__mocks__/fileMock.js",
-      "\\.(css|less|scss)$": "identity-obj-proxy",
-      "^./style$": "identity-obj-proxy",
-      "^preact$": "<rootDir>/node_modules/preact/dist/preact.min.js",
-      "^react$": "preact-compat",
-      "^react-dom$": "preact-compat",
-      "^create-react-class$": "preact-compat/lib/create-react-class",
-      "^react-addons-css-transition-group$": "preact-css-transition-group"
-    }
+      "<rootDir>/tests/__mocks__/browserMocks.js",
+      "<rootDir>/tests/__mocks__/setupTests.js"
+    ]
   }
 }
