Responsivitiy, UI polish

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "preact": "^10.0.1",
     "preact-render-to-string": "^5.1.0",
     "preact-router": "^3.0.0",
-    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0",
     "simplebar-react": "^2.1.0"
   },
   "jest": {
