--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:production": "env-cmd -f .env.production npm run -s serve",
-    "start:staging": "env-cmd -f .env.staging npm run -s dev",
-    "start:development": "env-cmd -f .env.development npm run -s dev",
-    "build:staging": "env-cmd -f .env.staging npm run build",
-    "build:production": "env-cmd -f .env.production npm run build",
-    "build": "preact build --no-prerender --no-sw --template src/template.html",
+    "start": "env-cmd -f .env npm run -s dev",
+    "start:development": "env-cmd -f .env env-cmd -f .env.development npm run -s dev",
+    "build": "env-cmd -f .env preact build --no-prerender --no-sw --template src/template.html",
     "serve": "preact build --no-prerender --no-sw --template src/template.html && preact serve",
     "dev": "preact watch --no-sw --template src/template.html",
     "deploy": "aws s3 sync build s3://bedtime.audius.co --delete && aws cloudfront create-invalidation --distribution-id E33HWSH5ZFFGR1 --paths \"/*\"",
