--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "preact-render-to-string": "^5.1.0",
     "preact-router": "^3.0.0",
     "react-transition-group": "^4.3.0",
-    "simplebar-react": "^2.1.0"
+    "simplebar-react": "^2.1.0",
+    "web3-utils": "^1.3.4"
   }
 }
