--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "preact build --no-prerender --no-sw --template src/template.html && preact serve",
     "dev": "preact watch --no-sw --template src/template.html",
     "deploy": "aws s3 sync build s3://bedtime.audius.co --delete && aws s3 cp s3://bedtime.audius.co/index.html s3://bedtime.audius.co/index.html  --cache-control max-age=0,no-cache,no-store,must-revalidate --content-type text/html --metadata-directive REPLACE --acl public-read && aws cloudfront create-invalidation --distribution-id E33HWSH5ZFFGR1 --paths \"/*\"",
+    "deploy:stage": "aws s3 sync build s3://bedtime.staging.audius.co --delete && aws s3 cp s3://bedtime.staging.audius.co/index.html s3://bedtime.staging.audius.co/index.html  --cache-control max-age=0,no-cache,no-store,must-revalidate --content-type text/html --metadata-directive REPLACE --acl public-read && aws cloudfront create-invalidation --distribution-id E2FVSCZAVXZNSY --paths \"/*\"",
     "lint": "eslint src"
   },
   "eslintIgnore": [
