--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ PREACT_APP_IDENTITY_ENDPOINT_STAGE=https://identityservice.staging.audius.co
 PREACT_APP_CREATOR_NODE_WHITELIST_PROD=https://usermetadata.audius.co,https://creatornode.audius.co,https://creatornode2.audius.co,https://creatornode3.audius.co
 PREACT_APP_CREATOR_NODE_WHITELIST_STAGE=https://usermetadata.staging.audius.co,https://creatornode.staging.audius.co,https://creatornode2.staging.audius.co,https://creatornode3.staging.audius.co
 PREACT_APP_HOST_PREFIX=/embed
+PREACT_APP_AMPLITUDE_KEY_PROD=86760558b8bb1b3aae61656efd4ddacb
+PREACT_APP_AMPLITUDE_KEY_STAGE=72a58ce4ad1f9bafcba0b92bedb6c33d
+PREACT_APP_AMPLITUDE_API_PROXY=metrics.audius.co
