--- a/package.json
+++ b/package.json
@@ -18,30 +18,31 @@
     "build/*"
   ],
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "eslint": "^6.0.1",
-    "eslint-config-synacor": "^3.0.4",
-    "identity-obj-proxy": "^3.0.0",
-    "per-env": "^1.0.2",
+    "env-cmd": "10.1.0",
+    "eslint": "6.0.1",
+    "eslint-config-synacor": "3.0.4",
+    "identity-obj-proxy": "3.0.0",
+    "per-env": "1.0.2",
     "preact-cli": "3.0.0-rc.7",
-    "preact-cli-plugin-env-vars": "^1.2.1",
-    "preact-cli-svg-loader": "^1.0.0",
-    "preact-render-spy": "^1.2.1",
-    "serve": "^11.1.0",
-    "webpack-cli": "^4.5.0"
+    "preact-cli-plugin-env-vars": "1.2.1",
+    "preact-cli-svg-loader": "1.0.0",
+    "preact-render-spy": "1.2.1",
+    "serve": "11.1.0",
+    "webpack-cli": "4.5.0"
   },
   "dependencies": {
-    "@audius/stems": "^0.3.9",
-    "amplitude-js": "^8.11.1",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "copy-to-clipboard": "^3.2.1",
-    "hls.js": "^0.13.1",
-    "preact": "^10.0.1",
-    "preact-render-to-string": "^5.1.0",
-    "preact-router": "^3.0.0",
-    "react-transition-group": "^4.3.0",
-    "simplebar-react": "^2.1.0",
-    "web3-utils": "^1.3.4"
+    "@audius/stems": "0.3.9",
+    "amplitude-js": "8.11.1",
+    "axios": "0.19.2",
+    "classnames": "2.2.6",
+    "copy-to-clipboard": "3.2.1",
+    "hls.js": "0.13.1",
+    "preact": "10.0.1",
+    "preact-render-to-string": "5.1.0",
+    "preact-router": "3.0.0",
+    "react-helmet": "6.1.0",
+    "react-transition-group": "4.3.0",
+    "simplebar-react": "2.1.0",
+    "web3-utils": "1.3.4"
   }
 }
