--- a/package.json
+++ b/package.json
@@ -20,31 +20,53 @@
     "build/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "env-cmd": "10.1.0",
-    "eslint": "6.0.1",
+    "eslint": "^8.33.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-standard-react": "^13.0.0",
     "eslint-config-synacor": "3.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "3.0.0",
+    "jest": "^29.4.2",
     "per-env": "1.0.2",
     "preact-cli": "3.0.0-rc.7",
     "preact-cli-plugin-env-vars": "1.2.1",
     "preact-cli-svg-loader": "1.0.0",
     "preact-render-spy": "1.2.1",
+    "prettier": "^2.8.3",
+    "prettier-config-standard": "^5.0.0",
+    "prettier-standard": "^16.4.1",
     "serve": "11.1.0",
     "webpack-cli": "4.5.0"
   },
   "dependencies": {
+    "@audius/sdk": "^1.0.42-remove-user-bank-signup.1",
     "@audius/stems": "0.3.9",
     "amplitude-js": "8.11.1",
     "axios": "0.19.2",
     "classnames": "2.2.6",
     "copy-to-clipboard": "3.2.1",
+    "hashids": "^2.2.10",
     "hls.js": "0.13.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "preact": "10.0.1",
     "preact-render-to-string": "5.1.0",
     "preact-router": "3.0.0",
     "react-helmet": "6.1.0",
     "react-transition-group": "4.3.0",
     "simplebar-react": "2.1.0",
+    "web3": "^1.8.2",
     "web3-utils": "1.3.4"
   }
 }
