supress conslole erros in prod

--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@ PREACT_APP_AUDIUS_SCHEME=http
 PREACT_APP_AMPLITUDE_KEY_PROD=86760558b8bb1b3aae61656efd4ddacb
 PREACT_APP_AMPLITUDE_KEY_STAGE=72a58ce4ad1f9bafcba0b92bedb6c33d
 PREACT_APP_AMPLITUDE_API_PROXY=metrics.audius.co
+PREACT_APP_ENVIRONMENT=development
