--- a/.env.stage
+++ b/.env.stage
@@ -6,3 +6,4 @@ PREACT_APP_AMPLITUDE_KEY=72a58ce4ad1f9bafcba0b92bedb6c33d
 PREACT_APP_AMPLITUDE_API_PROXY=gain.audius.co
 PREACT_APP_HOSTNAME=staging.audius.co
 PREACT_APP_HOSTNAME_REDIRECT=redirect.staging.audius.co
+PREACT_APP_ENVIRONMENT=staging
