--- a/.env.prod
+++ b/.env.prod
@@ -6,3 +6,4 @@ PREACT_APP_AMPLITUDE_KEY=86760558b8bb1b3aae61656efd4ddacb
 PREACT_APP_AMPLITUDE_API_PROXY=gain.audius.co
 PREACT_APP_HOSTNAME=audius.co
 PREACT_APP_HOSTNAME_REDIRECT=redirect.audius.co
+PREACT_APP_ENVIRONMENT=production
