--- a/.env.dev
+++ b/.env.dev
@@ -4,3 +4,4 @@ PREACT_APP_AMPLITUDE_KEY_PROD=86760558b8bb1b3aae61656efd4ddacb
 PREACT_APP_AMPLITUDE_KEY_STAGE=72a58ce4ad1f9bafcba0b92bedb6c33d
 PREACT_APP_AMPLITUDE_API_PROXY=metrics.audius.co
 PREACT_APP_ENVIRONMENT=development
+PREACT_APP_DISCOVERY_NODE_WHITELIST=https://discoveryprovider.staging.audius.co,https://discoveryprovider2.staging.audius.co,https://discoveryprovider3.staging.audius.co
