staging sdk; fix collection mp3 streaming

--- a/.env.prod
+++ b/.env.prod
@@ -7,3 +7,4 @@ PREACT_APP_AMPLITUDE_API_PROXY=gain.audius.co
 PREACT_APP_HOSTNAME=audius.co
 PREACT_APP_HOSTNAME_REDIRECT=redirect.audius.co
 PREACT_APP_ENVIRONMENT=production
+PREACT_APP_STREAM_MP3_ON=
