--- a/.env.stage
+++ b/.env.stage
@@ -7,3 +7,11 @@ PREACT_APP_AMPLITUDE_API_PROXY=gain.audius.co
 PREACT_APP_HOSTNAME=staging.audius.co
 PREACT_APP_HOSTNAME_REDIRECT=redirect.staging.audius.co
 PREACT_APP_ENVIRONMENT=staging
+PREACT_APP_ETH_TOKEN_ADDRESS=0x5375BE4c52fA29b26077B0F15ee5254D779676A6
+PREACT_APP_ETH_REGISTRY_ADDRESS=0xF27A9c44d7d5DDdA29bC1eeaD94718EeAC1775e3
+PREACT_APP_ETH_PROVIDER_URL=https://eth.staging.audius.co
+PREACT_APP_ETH_NETWORK_ID=5
+PREACT_APP_ETH_OWNER_WALLET=
+PREACT_APP_WORMHOLE_ADDRESS=0xf6f45e4d836da1d4ecd43bb1074620bfb0b7e0d7
+PREACT_APP_CLAIM_DISTRIBUTION_CONTRACT_ADDRESS=0x74b89B916c97d50557E8F944F32662fE52Ce378d
+PREACT_APP_STREAM_MP3_ON=
