--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,16 @@
 PREACT_APP_LOCAL_GA_PORT=8000
 PREACT_APP_AUDIUS_SCHEME=http
-PREACT_APP_AMPLITUDE_KEY_PROD=86760558b8bb1b3aae61656efd4ddacb
-PREACT_APP_AMPLITUDE_KEY_STAGE=72a58ce4ad1f9bafcba0b92bedb6c33d
-PREACT_APP_AMPLITUDE_API_PROXY=metrics.audius.co
+PREACT_APP_AMPLITUDE_KEY=72a58ce4ad1f9bafcba0b92bedb6c33d
+PREACT_APP_AMPLITUDE_API_PROXY=gain.audius.co
 PREACT_APP_ENVIRONMENT=development
+PREACT_APP_ETH_TOKEN_ADDRESS=0x5375BE4c52fA29b26077B0F15ee5254D779676A6
+PREACT_APP_ETH_REGISTRY_ADDRESS=0xF27A9c44d7d5DDdA29bC1eeaD94718EeAC1775e3
+PREACT_APP_ETH_PROVIDER_URL=https://eth.staging.audius.co
+PREACT_APP_ETH_NETWORK_ID=5
+PREACT_APP_ETH_OWNER_WALLET=
+PREACT_APP_WORMHOLE_ADDRESS=0xf6f45e4d836da1d4ecd43bb1074620bfb0b7e0d7
+PREACT_APP_CLAIM_DISTRIBUTION_CONTRACT_ADDRESS=0x74b89B916c97d50557E8F944F32662fE52Ce378d
+PREACT_APP_IDENTITY_ENDPOINT=https://identityservice.staging.audius.co
+PREACT_APP_CREATOR_NODE_WHITELIST=https://usermetadata.staging.audius.co,https://creatornode.staging.audius.co,https://creatornode2.staging.audius.co,https://creatornode3.staging.audius.co
+PREACT_APP_HOSTNAME_REDIRECT=redirect.staging.audius.co
+PREACT_APP_STREAM_MP3_ON=
